@@ -4,6 +4,7 @@
 * 修复:
     01.Fix RsfSettings 接口的 add & remove & set 系方法,解决 settings key 出现大小写敏感问题。
     02.Fix AbstractEnvironment 的 refreshVariables 方法,忽略了对默认值的替换,导致了bug出现。
+    03.修改 Environment 接口拼写错误的方法名。remoteEnvVar -> removeEnvVar。
 
 ===== Hasor-Core v2.4.4 (2016-09-05)
 * 新增:
